--- a/CVT2D/CVT2D.vcxproj
+++ b/CVT2D/CVT2D.vcxproj
@@ -99,13 +99,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;CVT2D_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(CGAL_DIR_X64)/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static_Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;SymbolicC++3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR_X64)/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static_Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,15 +135,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;CVT2D_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(CGAL_DIR_X64)/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;SymbolicC++3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR_X64)/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
