--- a/CVT2D/CVT2D.vcxproj.filters
+++ b/CVT2D/CVT2D.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="CVT2D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="multiIntegral.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
