--- a/test_main/test_main.vcxproj
+++ b/test_main/test_main.vcxproj
@@ -85,13 +85,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR)\include;$(CGAL_DIR)\build\include;$(CGAL_DIR)\auxiliary\gmp\include;$(BOOST_INCLUDEDIR);H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\i386;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR)\include;$(CGAL_DIR)\build\include;$(CGAL_DIR)\auxiliary\gmp\include;$(BOOST_INCLUDEDIR);C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\i386;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CGAL_DIR)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR)\auxiliary\gmp\lib\libgmp-10.lib;..\$(Configuration)\CVT2D.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CGAL_DIR)/build/lib;$(CGAL_DIR)/build/lib/$(Configuration);$(BOOST_LIBRARYDIR);$(BOOST_LIBRARYDIR)/$(Configuration);C:\Program Files\Microsoft Compute Cluster Pack\Lib\i386;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\Static_Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR)\auxiliary\gmp\lib\libgmp-10.lib;..\$(Configuration)\CVT2D.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR)/build/lib;$(CGAL_DIR)/build/lib/$(Configuration);$(BOOST_LIBRARYDIR);$(BOOST_LIBRARYDIR)/$(Configuration);C:\Program Files\Microsoft Compute Cluster Pack\Lib\i386;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -101,13 +101,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;$(MATLABROOT)\extern\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;..\x64\$(Configuration)\CVT2D.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CGAL_DIR_X64))/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static_Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;..\x64\$(Configuration)\CVT2D.lib;msmpi.lib;mclmcrrt.lib;libmx.lib;libmat.lib;mclmcr.lib;..\multiIntegral.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR_X64))/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;$(MATLABROOT)\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,15 +119,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR)\include;$(CGAL_DIR)\build\include;$(CGAL_DIR)\auxiliary\gmp\include;$(BOOST_INCLUDEDIR);H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\i386;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR)\include;$(CGAL_DIR)\build\include;$(CGAL_DIR)\auxiliary\gmp\include;$(BOOST_INCLUDEDIR);C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\i386;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>$(CGAL_DIR)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR)\auxiliary\gmp\lib\libgmp-10.lib;..\$(Configuration)\CVT2D.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CGAL_DIR)/build/lib;$(CGAL_DIR)/build/lib/$(Configuration);$(BOOST_LIBRARYDIR);$(BOOST_LIBRARYDIR)/$(Configuration);C:\Program Files\Microsoft Compute Cluster Pack\Lib\i386;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\Static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR)\auxiliary\gmp\lib\libgmp-10.lib;..\$(Configuration)\CVT2D.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR)/build/lib;$(CGAL_DIR)/build/lib/$(Configuration);$(BOOST_LIBRARYDIR);$(BOOST_LIBRARYDIR)/$(Configuration);C:\Program Files\Microsoft Compute Cluster Pack\Lib\i386;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,15 +139,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;H:\Graphics\SymbolicC++3-3.35-vc\include;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(CGAL_DIR_X64)\include;$(CGAL_DIR_X64)\build\include;$(CGAL_DIR_X64)\auxiliary\gmp\include;H:\boost_1_58_0\libx64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Include;C:\Program Files\Microsoft Compute Cluster Pack\Include\amd64;$(MATLABROOT)\extern\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;..\x64\$(Configuration)\CVT2D.lib;SymbolicC++3.lib;msmpi.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(CGAL_DIR_X64))/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;H:\Graphics\SymbolicC++3-3.35-vc\SymbolicC++3\x64\Static;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>$(CGAL_DIR_X64)\auxiliary\gmp\lib\libmpfr-4.lib;$(CGAL_DIR_X64)\auxiliary\gmp\lib\libgmp-10.lib;..\x64\$(Configuration)\CVT2D.lib;msmpi.lib;mclmcrrt.lib;libmx.lib;libmat.lib;mclmcr.lib;..\multiIntegral.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(CGAL_DIR_X64))/build/lib;$(CGAL_DIR_X64)/build/lib/$(Configuration);H:\boost_1_58_0\libx64-msvc-12.0\lib64-msvc-12.0;C:\Program Files\Microsoft Compute Cluster Pack\Lib\amd64;$(MATLABROOT)\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
